Updated styling and fixed a lot of layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,10 @@
 /* Images */
-#pic
-{
-  height:100%;
-  position:fixed;
-  left:0%;
-
-}
 #rose
 {
-  width:21%;
-  margin-top:-2%;
-
+  height:100%;
+  box-shadow: 0px 0px 25px #2E0762;
+  float:left;
+  margin:2.5%;
 }
 .iconclip
 {
@@ -21,25 +15,23 @@
 body
 {
   background-color:#fffeff;
-  font-family:Didact Gothic;
   text-align:center;
+  font-family:Didact Gothic;
   margin:0px;
 }
 #headerpic
 {
   width:100%;
-  height:35%;
-  position:fixed;
+  height:40%;
   left:0%;
-  background-image:url("BayBridge.png");
-  background-size:cover;
+  background-color:#DF4070;
+  box-shadow: 0px 0px 25px #850028;
   top:0%;
 
 }
 #right
 {
   width:100%;
-  margin-top:21%;
 }
 #links
 {
@@ -51,17 +43,15 @@ body
 #design_container
 {
   width:100%;
-  margin-top:25%;
 }
 
 #dev_container
 {
   width:100%;
-  margin-top:21%;
 }
 #icons
 {
-  width:98%;
+  width:100%;
   background-color: rgba(220 , 220, 220, .3);
   box-shadow: 0px 2px 5px #111534;
 }
@@ -98,13 +88,17 @@ a:hover
   text-shadow: #000675 0px 0px 13px;
   cursor:pointer;
 }
+a.inline
+{
+  margin-left:0px;
+  margin-right:0px;
+}
 /* Text */
 h1
 {
   font-size:50px;
   font-weight: 200;
-  top:30%;
-  margin-bottom:15px;
+  padding-top:5%;
 }
 #homelabel:hover
 {
@@ -118,6 +112,8 @@ h2
 h2.sectionheaders
 {
   text-decoration:underline;
+  text-align:left;
+  padding-left: 2.5%;
 }
 h3
 {
@@ -137,6 +133,5 @@ p
   text-align:justify;
   font-size: 21px;
   font-weight:200;
-  margin-top:7%;
 }
 /* Buttons */
